fix: 커스텀 비동기 처리용 beatAsyncExecutor 분리 및 격리 등록 (#525)
* fix: beatAsyncExecutor 등록 및 명시

* test: beatAsyncExecutor로 변경